--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,12 @@
+spring:
+  application:
+    name: bcheck-api
+  profiles:
+    active: local
+  jpa:
+    show-sql: true
 
+server:
+  servlet:
+    context-path: /app
+  port: 9090
