--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,18 +20,11 @@ spring:
     activate:
       on-profile: local
 
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-
   datasource:
-    url: jdbc:h2:~/test;
-    driverClassName: org.h2.Driver
-    username: sa
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: testuser
     password: test123
 
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: create
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
