--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     // jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    // security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
     // db
     runtimeOnly 'com.h2database:h2'
     implementation 'org.postgresql:postgresql'
