--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,11 @@ server:
       enabled: true
   port: 9090
 
+# JWT
+jwt:
+  secret: aHNvbi1iY2hlY2stYXBpLXNwcmluZw==
+  access-expired: 1800 # 30(분) - 단위 (초)
+
 ---
 spring:
   config:
